Overflow problem in safari repairing

--- a/src/MainLayout/MainLayout.module.css
+++ b/src/MainLayout/MainLayout.module.css
@@ -3,5 +3,7 @@
 	display: flex;
 	flex-direction: column;
 	height: 100vh;
+	touch-action: none;
+	-ms-touch-action: none;
 }
 
